# federated-collection-discovery-deployment

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cdk.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy.yaml
infrastructure/: Dockerfile.api  app.py  config.py
