[project]
name = "federated-collection-discovery-deployment"
version = "0.1.0"
description = "AWS CDK application for deploying the Federated Collection Discovery API"
authors = [
    {name = "Henry Rodman", email = "henry@developmentseed.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.252.0",
    "constructs>=10.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "flake8>=7.1.1",
    "mypy>=1.20.2",
    "flake8-pyproject>=1.2.4",
]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
strict = true
mypy_path = "src"

[tool.ruff]
lint.select = ["E", "F", "I"]

[tool.flake8]
max-line-length = 88

